--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li>Liebevolle Betreuung ab 06:30 Uhr bis 19:30 Uhr</li>
                 </h2>
                 <h2>
-                    <li>Nur 30,00 € pro Tag</li>
+                    <li>Nur 45,00 € pro Tag</li>
                 </h2>
             </ul>
 
@@ -196,13 +196,6 @@
 
             <div class="contact-container">
 
-                <div class="contact-container-left">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2511.412161683392!2d7.195212276875518!3d50.990055348364756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bed722d9f4b6f7%3A0x949e0a7d70e632f0!2sBraunsberger%20Feld%209%2C%2051429%20Bergisch%20Gladbach%2C%20Deutschland!5e0!3m2!1sde!2suk!4v1724325847123!5m2!1sde!2suk"
-                        style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-
                 <div class="contact-container-right">
                     <div class="contact-item">
                         <h2>
@@ -245,8 +238,9 @@
                 <p>51429 Bergisch Gladbach</p>
             </div>
             <div class="footer-item">
-                <a target="_blank" href="./impressum.html">Impressum</a>
-                <a target="_blank" href="./datenschutz.html">Datenschutz</a>
+                <a target="_blank" href="https://instagram.com/dog_stay_deluxe/">Instagram</a>
+                <a href="./impressum.html">Impressum</a>
+                <a href="./datenschutz.html">Datenschutz</a>
             </div>
             <div class="footer-item footer-item-secondary">
                 <h4>Öffnungszeiten</h4>
