--- a/index.html
+++ b/index.html
@@ -57,13 +57,6 @@
                 <h1>in Bergisch Gladbach Herkenrath</h1>
             </div>
 
-            <div class="title">
-                <span>
-                    <h1 class="txt-beige">Eroffnung im</h1>
-                    <h1>Oktober 2024!</h1>
-                </span>
-            </div>
-
             <div class="subtitle">
                 <h2>Tages- & Nachtbetreuung für Ihre Vierbeiner</h2>
             </div>
@@ -146,6 +139,16 @@
 
             <div class="gallery-container">
 
+                <h1>Videos</h1>
+
+                <div class="videos">
+
+                    <video autoplay loop muted src="./src/img/gallery/video/1.mp4"></video>
+                    <video autoplay loop muted src="./src/img/gallery/video/2.mp4"></video>
+                    <video autoplay loop muted src="./src/img/gallery/video/3.mp4"></video>
+
+                </div>
+
                 <h1>Galerie</h1>
 
                 <div class="gallery">
@@ -160,6 +163,9 @@
                         <img src="./src/img/gallery/1/7.jpg" alt="">
                         <img src="./src/img/gallery/1/8.jpg" alt="">
                         <img src="./src/img/gallery/1/9.jpg" alt="">
+                        <img src="./src/img/gallery/1/10.jpg" alt="">
+                        <img src="./src/img/gallery/1/11.jpg" alt="">
+                        <img src="./src/img/gallery/1/12.jpg" alt="">
                     </div>
 
                     <div class="gallery-column">
@@ -172,6 +178,8 @@
                         <img src="./src/img/gallery/2/7.jpg" alt="">
                         <img src="./src/img/gallery/2/8.jpg" alt="">
                         <img src="./src/img/gallery/2/9.jpg" alt="">
+                        <img src="./src/img/gallery/2/10.jpg" alt="">
+                        <img src="./src/img/gallery/2/11.jpg" alt="">
                     </div>
 
                     <div class="gallery-column">
@@ -184,6 +192,10 @@
                         <img src="./src/img/gallery/3/7.jpg" alt="">
                         <img src="./src/img/gallery/3/8.jpg" alt="">
                         <img src="./src/img/gallery/3/9.jpg" alt="">
+                        <img src="./src/img/gallery/3/10.jpg" alt="">
+                        <img src="./src/img/gallery/3/11.jpg" alt="">
+                        <img src="./src/img/gallery/3/12.jpg" alt="">
+                        <img src="./src/img/gallery/3/13.jpg" alt="">
                     </div>
 
                 </div>
@@ -196,31 +208,49 @@
 
             <div class="contact-container">
 
-                <div class="contact-container-right">
-                    <div class="contact-item">
-                        <h2>
-                            Tel. oder WhatsApp
-                        </h2>
-                        <a href="tel://01707020128" class="contact-item-txt">
-                            0170 7020128
-                        </a>
-                    </div>
+                <h1>Kontakt</h1>
 
-                    <div class="contact-item">
-                        <h2>Öffnungszeiten</h2>
-                        <div class="contact-item-txt">
-                            <p>Montag bis Sonntag</p>
-                            <p>Ab 06:30 Uhr</p>
-                            <p>Abholung bis 19:30 Uhr</p>
-                        </div>
-                    </div>
+                <div class="contact-item">
+                    <h2>
+                        Tel. oder WhatsApp
+                    </h2>
+                    <a href="tel://01707020128" class="contact-item-txt">
+                        0170 7020128
+                    </a>
+                </div>
 
-                    <div class="contact-item">
-                        <h2>Anfahrt</h2>
-                        <div class="contact-item-txt">
-                            <p>Braunsbergerfeld 9</p>
-                            <p>51429 Bergisch Gladbach</p>
-                        </div>
+                <div class="contact-item">
+                    <h2>
+                        E-Mail
+                    </h2>
+                    <a href="mailto://info@dogstay.de" class="contact-item-txt">
+                        info@dogstay.de
+                    </a>
+                </div>
+
+                <div class="contact-item">
+                    <h2>Anfahrt</h2>
+                    <div class="contact-item-txt">
+                        <p>Braunsbergerfeld 9</p>
+                        <p>51429 Bergisch Gladbach</p>
+                    </div>
+                </div>
+
+                <h1>Oeffnungszeiten</h1>
+
+                <div class="contact-item">
+                    <h2>Hundetagesstätte</h2>
+                    <div class="contact-item-txt">
+                        <p>Montag bis Sonntag</p>
+                        <p>Ab 06:30 Uhr</p>
+                        <p>Abholung bis 19:30 Uhr</p>
+                    </div>
+                </div>
+
+                <div class="contact-item">
+                    <h2>Urlaubsbetreuung</h2>
+                    <div class="contact-item-txt">
+                        <p>Individuell nach Absprache</p>
                     </div>
                 </div>
 
