--- a/index.html
+++ b/index.html
@@ -242,15 +242,14 @@
                     <h2>Hundetagesstätte</h2>
                     <div class="contact-item-txt">
                         <p>Montag bis Sonntag</p>
-                        <p>Ab 06:30 Uhr</p>
-                        <p>Abholung bis 19:30 Uhr</p>
+                        <p>06:30 bis 19:30 Uhr</p>
                     </div>
                 </div>
 
                 <div class="contact-item">
                     <h2>Urlaubsbetreuung</h2>
                     <div class="contact-item-txt">
-                        <p>Individuell nach Absprache</p>
+                        <p>Zeiten Individuell (nach Absprache)</p>
                     </div>
                 </div>
 
